# core

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  revision_data.h.in.cmake
.github/workflows/: ci.yml  code-quality.yml  macos.yml  windows.yml
cmake/: CompilerSettings.cmake  Dependencies.cmake  DependencyProvider.cmake  ModernHelpers.cmake  Packaging.cmake  options.cmake  showoptions.cmake
cmake/compiler/: Clang.cmake  GCC.cmake  MSVC.cmake
cmake/macros/: ConfigureBaseTargets.cmake
cmake/packaging/systemd/: trinitycore-bnet.service.in  trinitycore-world.service.in
contrib/: run_extractors.bat
contrib/protoc-bnet/: BnetCodeGenerator.cpp  BnetFileGenerator.h  CMakeLists.txt
contrib/vmangos_db_import/: db_import.py
contrib/vmangos_db_import/importer/: creature.py  player.py  pool.py  quest.py  spell.py  trainer.py  waypoint.py
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/efsw/: CMakeLists.txt
dep/g3dlite/include/G3D/: Array.h
dep/gsoap/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
docs/: installation.md  win_installation.md
sql/base/: TCC.auth.090825.sql  TCC.characters.090825.sql  TCC.hotfixes.090825.sql  auth_database.sql  characters_database.sql
sql/base/dev/: hotfixes_database.sql  world_database.sql
sql/base/old/: README.txt  auth_database.sql  characters_database.sql
sql/updates/world/: 2025_08_11_spell_proc_enrage.sql  2025_08_12_spell_script_names_bloodthirst.sql
src/common/: CMakeLists.txt
src/common/Asio/: DeadlineTimer.h  Resolver.h
src/common/Collision/: DynamicTree.cpp  DynamicTree.h
src/common/Collision/Management/: IVMapManager.h  MMapManager.cpp  MMapManager.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MapDefines.h
src/common/Collision/Models/: GameObjectModel.cpp
src/common/Cryptography/: CryptoHash.h
src/common/DataStores/: DB2FileLoader.cpp
src/common/Debugging/: Errors.cpp
src/common/Encoding/: Base64.cpp  Base64.h  BaseEncoding.h
src/common/Metric/: Metric.cpp
src/common/Threading/: ProducerConsumerQueue.h
src/common/Utilities/: EventProcessor.h  Util.h
src/server/bnetserver/: Main.cpp  bnetserver.conf.dist
src/server/bnetserver/REST/: LoginRESTService.cpp  LoginRESTService.h
src/server/bnetserver/Server/: Session.cpp
src/server/database/Logging/: AppenderDB.h
src/server/database/Updater/: DBUpdater.cpp  UpdateFetcher.cpp
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h
src/server/game/Accounts/: RBAC.h
src/server/game/Achievements/: CriteriaHandler.cpp
src/server/game/Battlefield/: Battlefield.cpp
src/server/game/Battlegrounds/: Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  enuminfo_ArenaTeam.cpp
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Hyperlinks.cpp  Hyperlinks.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h
src/server/game/DataStores/: DB2LoadInfo.h  DB2Stores.cpp  DB2Stores.h  DB2Structure.h  DBCEnums.h
src/server/game/DungeonFinding/: LFGMgr.cpp  LFGMgr.h
src/server/game/Events/: GameEventMgr.cpp  GameEventSender.cpp
src/server/game/Globals/: HonorMgr.cpp  HonorMgr.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: Grid.h  GridDefines.h  NGrid.cpp  NGrid.h  ObjectGridLoader.cpp
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/server/game/Guilds/: Guild.cpp  Guild.h
src/server/game/Handlers/: BattleGroundHandler.cpp  CalendarHandler.cpp  CharacterHandler.cpp  GroupHandler.cpp  LootHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  PetHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  SpellHandler.cpp
src/server/game/Instances/: InstanceScript.cpp  InstanceScriptData.cpp
src/server/game/Loot/: Loot.cpp  Loot.h
src/server/game/Mails/: Mail.cpp
src/server/game/Maps/: AreaBoundary.cpp  AreaBoundary.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  TerrainMgr.cpp  ZoneScript.cpp  ZoneScript.h
src/server/game/Miscellaneous/: Language.h  SharedDefines.h  enuminfo_SharedDefines.cpp
src/server/game/Phasing/: PhasingHandler.cpp  PhasingHandler.h
src/server/game/Scenarios/: Scenario.cpp  Scenario.h  ScenarioMgr.h
src/server/game/Scripting/: ScriptMgr.cpp  ScriptMgr.h  ScriptSystem.h
src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp
src/server/game/Spells/: Spell.cpp  Spell.h  SpellDefines.h  SpellEffects.cpp  SpellHistory.cpp  SpellHistory.h  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp  SpellMgr.h  SpellScript.cpp
src/server/game/World/: World.cpp  World.h
src/server/proto/: CMakeLists.txt
src/server/scripts/: ScriptLoader.cpp.in.cmake
src/server/scripts/Battlegrounds/: battlegrounds_script_loader.cpp
src/server/scripts/Commands/: cs_bg.cpp  cs_debug.cpp  cs_go.cpp  cs_gobject.cpp  cs_instance.cpp  cs_misc.cpp  cs_npc.cpp  cs_pet.cpp  cs_reload.cpp
src/server/scripts/EasternKingdoms/: eastern_kingdoms_script_loader.cpp  zone_dun_morogh_area_coldridge_valley.cpp  zone_hinterlands.cpp  zone_redridge_mountains.cpp
src/server/scripts/Kalimdor/: kalimdor_script_loader.cpp  zone_ashenvale.cpp  zone_azuremyst_isle.cpp  zone_bloodmyst_isle.cpp  zone_mulgore.cpp  zone_the_barrens.cpp  zone_winterspring.cpp
src/server/scripts/Northrend/: northrend_script_loader.cpp  zone_borean_tundra.cpp  zone_grizzly_hills.cpp  zone_icecrown.cpp  zone_sholazar_basin.cpp  zone_storm_peaks.cpp
src/server/scripts/Outland/: zone_nagrand.cpp  zone_shadowmoon_valley.cpp
src/server/scripts/Spells/: spell_druid.cpp  spell_generic.cpp  spell_hunter.cpp  spell_item.cpp  spell_mage.cpp  spell_paladin.cpp  spell_rogue.cpp  spell_warlock.cpp  spell_warrior.cpp
src/server/scripts/World/: npcs_special.cpp
src/server/shared/DataStores/: DB2DatabaseLoader.cpp  DB2Store.cpp
src/server/worldserver/: Main.cpp  worldserver.aps  worldserver.conf.dist
src/tools/mmaps_generator/: MapBuilder.cpp
(+185 files in other folders)
